--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@emailjs/browser": "^3.6.2",
+    "bootstrap": "^5.2.0-beta1"
   },
   "devDependencies": {
     "eslint": "8.26.0",
