--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "bootstrap": "^5.2.0-beta1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@emailjs/browser": "^3.6.2",
-    "bootstrap": "^5.2.0-beta1"
+    "sass": "^1.69.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
