--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "eslint": "8.26.0",
