--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.2.0-beta1",
+    "classnames": "^2.5.1",
+    "moment": "^2.30.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.30.2",
     "sass": "^1.69.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
